<?xml version="1.0"?>
<package format="2">
  <name>choreonoid_bridge_shm</name>
  <version>0.0.0</version>
  <description>The choreonoid_bridge_shm package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>choreonoid</depend>
  <depend>trans_vm</depend>

</package>
